--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,29 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&display=swap');
+
+ul li:hover {
+    font-weight: 300;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
-* {
-  box-sizing: border-box;
-}
+@layer base {
+    html {
+        /* font-family: Proxima Nova, system-ui, sans-serif; */
+        font-family: 'Chakra Petch', sans-serif;
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-} */
+    }
+}
