--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,11 @@
 ul li:hover {
     font-weight: 300;
 }
+
+
+.goga {
+
+    background-image: url(https://www.bajajfinserv.in/5_mobiles_under_Rs.20,000_that_you_buy_on_BF_EMI_store_banner_Samsung-Galaxy-M31_CP-top-banner_Desktop_790x345.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
